set(dot_section dot_section.cpp)
set(knapsack knapsack.cpp)
set(dif_components dif_components.cpp)
set(huffman_enc huffman_enc.cpp)
set(huffman_dec huffman_dec.cpp)
set(priority_queue priority_queue.cpp)

add_executable(w2_task1 ${dot_section})
add_executable(w2_task2 ${knapsack})
add_executable(w2_task3 ${dif_components})
add_executable(w2_task5 ${huffman_enc})
add_executable(w2_task6 ${huffman_dec})
add_executable(w2_task7 ${priority_queue})