set(longest_inc_seq longest_inc_seq.cpp)
set(lis_nlogn lis_nlogn.cpp)
set(levenstein_dist levenstein_dist.cpp)
set(knapsack_dp knapsack_dp.cpp)
set(coins_exch coins_exch.cpp)

add_executable(w4_task1 ${longest_inc_seq})
add_executable(w4_task2 ${lis_nlogn})
add_executable(w4_task3 ${levenstein_dist})
add_executable(w4_task4 ${knapsack_dp})
add_executable(w4_task5 ${coins_exch})
